fix: 修复终审报告第4轮迭代中的所有问题
## Bug 修复
- [P1] MergeSpec: H2 UPSERT 重试逻辑中 InterruptedException 处理不完整，添加 addSuppressed()
- [P1] MergeSpec: 标记非线程安全方法 buildSql/extractFieldValues 为 @Deprecated
- [P1] SoftDeleteHelper: softDeleteAll/softDeleteByIds 支持 Enum 类型字段
- [P1] EncryptConverter: 盐值文件添加文件锁保护，防止多进程覆盖
- [P1] EncryptConverter: Windows 权限设置改用 Java NIO AclFileAttributeView

## 功能增强
- [P1] MyJpaTemplate: 添加 saveAllBatchedInSeparateTransactions() 方法支持分批独立事务
- [P2] SqlSlowQueryInterceptor: 代理类缓存大小从 256 增加到 512

## 文档改进
- [P2] TenantContext: 增强虚拟线程使用说明文档
- [P2] QueryCacheManager: 添加事务集成说明和 @TransactionalEventListener 示例
- [P2] EntityClassResolver: 添加反射使用说明文档

## 测试
- 添加 SoftDeleteHelper escapeIdentifier 测试
- 添加 SoftDeleteHelper 参数校验测试
- 添加 MergeSpec 批量操作边界测试
- 添加 MyJpaTemplate saveAllBatched/saveAllBatchedInSeparateTransactions 测试

## 构建验证
- Spotless: 通过
- SpotBugs: 0 bugs
- JaCoCo: 所有覆盖率检查通过
- 测试: 全部通过